ui alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,8 @@ body {
 .App {
   width: 100%;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
